fix(mobile): correct button being a different color on mobile

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: transparent;
+  background-color: #212121;
   background-image: radial-gradient(#1DB954 1px, #212121 1px);
   background-size: 30px 30px;
   width: 100%;
