--- a/src/components/playlist/playlist.css
+++ b/src/components/playlist/playlist.css
@@ -31,6 +31,7 @@
 
 .saveButton {
     margin: 0.45rem 0 2rem 0;
+    color: #212121;
     cursor: pointer;
     font-weight: 600;
     background-color: #FFF;
